--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     </header>
 
-    <section class="grid-test">
+    <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
                 Col 1 of 2
@@ -97,8 +97,7 @@
                 Col 3 of 4
             </div>
         </div>
-        
-    </section>
+    </section> -->
 
 </body>
 
