--- a/index.html
+++ b/index.html
@@ -38,14 +38,27 @@
                     Exciting tours for adventurous people
                 </h2>
             </div>
+
             <div class="row">
                 <div class="col-1-of-2">
-                    Col 1 of 2
+                    <h3 class="heading-tertiary">
+                        You're going to fall in love with nature
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil fuga blanditiis quae nemo ab, impedit veniam corrupti eius, ipsum, accusantium excepturi. Aperiam porro, iure assumenda distinctio quo corrupti id sunt?
+                    </p>
+                    <h3 class="heading-tertiary">
+                        Live adventure like you never had before
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil fuga blanditiis quae nemo ab, impedit veniam corrupti eius, ipsum, accusantium excepturi. Aperiam porro, iure assumenda distinctio quo corrupti id sunt?
+                    </p>
                 </div>
                 <div class="col-1-of-2">
                     Col 1 of 2
                 </div>
             </div>
+
         </section>
     </main>
 
