--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main>
         <section class="section-about">
-            <div class="u-center-text u-margin-bottom-8">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Exciting tours for adventurous people
                 </h2>
@@ -41,18 +41,19 @@
 
             <div class="row">
                 <div class="col-1-of-2">
-                    <h3 class="heading-tertiary">
+                    <h3 class="heading-tertiary u-margin-bottom-small">
                         You're going to fall in love with nature
                     </h3>
                     <p class="paragraph">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil fuga blanditiis quae nemo ab, impedit veniam corrupti eius, ipsum, accusantium excepturi. Aperiam porro, iure assumenda distinctio quo corrupti id sunt?
                     </p>
-                    <h3 class="heading-tertiary">
+                    <h3 class="heading-tertiary u-margin-bottom-small">
                         Live adventure like you never had before
                     </h3>
                     <p class="paragraph">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil fuga blanditiis quae nemo ab, impedit veniam corrupti eius, ipsum, accusantium excepturi. Aperiam porro, iure assumenda distinctio quo corrupti id sunt?
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil fuga blanditiis quae nemo ab, impedit veniam corrupti eius, ipsum.
                     </p>
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
                     Col 1 of 2
