--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         You're going to fall in love with nature
                     </h3>
                     <p class="paragraph">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil fuga blanditiis quae nemo ab, impedit veniam corrupti eius, ipsum, accusantium excepturi. Aperiam porro, iure assumenda distinctio quo corrupti id sunt?
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil fuga blanditiis quae nemo ab, impedit veniam corrupti eius, ipsum, accusantium excepturi.
                     </p>
                     <h3 class="heading-tertiary u-margin-bottom-small">
                         Live adventure like you never had before
@@ -64,6 +64,47 @@
                 </div>
             </div>
 
+        </section>
+
+        <section class="section-features">
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro, iure assumenda distinctio quo.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro, iure assumenda distinctio quo.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro, iure assumenda distinctio quo.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro, iure assumenda distinctio quo.
+                        </p>
+                    </div>
+                </div>
+            </div> 
         </section>
     </main>
 
