updated front side card

--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
                         You're going to fall in love with nature
                     </h3>
                     <p class="paragraph">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil fuga blanditiis quae nemo ab, impedit veniam corrupti eius, ipsum, accusantium excepturi.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil fuga blanditiis quae nemo ab,
+                        impedit veniam corrupti eius, ipsum, accusantium excepturi.
                     </p>
                     <h3 class="heading-tertiary u-margin-bottom-small">
                         Live adventure like you never had before
                     </h3>
                     <p class="paragraph">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil fuga blanditiis quae nemo ab, impedit veniam corrupti eius, ipsum.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil fuga blanditiis quae nemo ab,
+                        impedit veniam corrupti eius, ipsum.
                     </p>
                     <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
@@ -73,7 +75,8 @@
                         <i class="feature-box__icon icon-basic-world"></i>
                         <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
                         <p class="feature-box__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro, iure assumenda distinctio quo.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro, iure assumenda
+                            distinctio quo.
                         </p>
                     </div>
                 </div>
@@ -82,7 +85,8 @@
                         <i class="feature-box__icon icon-basic-compass"></i>
                         <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
                         <p class="feature-box__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro, iure assumenda distinctio quo.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro, iure assumenda
+                            distinctio quo.
                         </p>
                     </div>
                 </div>
@@ -91,7 +95,8 @@
                         <i class="feature-box__icon icon-basic-map"></i>
                         <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
                         <p class="feature-box__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro, iure assumenda distinctio quo.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro, iure assumenda
+                            distinctio quo.
                         </p>
                     </div>
                 </div>
@@ -100,11 +105,12 @@
                         <i class="feature-box__icon icon-basic-heart"></i>
                         <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
                         <p class="feature-box__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro, iure assumenda distinctio quo.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam porro, iure assumenda
+                            distinctio quo.
                         </p>
                     </div>
                 </div>
-            </div> 
+            </div>
         </section>
 
         <section class="section-tours">
@@ -117,7 +123,23 @@
                 <div class="col-1-of-3">
                     <div class="card">
                         <div class="card__side card__side--front">
-                            front
+                            <div class="card__picture card__picture--1">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--1">
+                                    The Sea Explorer
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>3 day tour</li>
+                                    <li>Up to 30 people</li>
+                                    <li>2 tour guides</li>
+                                    <li>Sleep in cozy hotels</li>
+                                    <li>Difficulty: easy</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="card__side  card__side--back card__side--back-1">
                             back
