--- a/index.html
+++ b/index.html
@@ -296,6 +296,29 @@
                 <a href="" class="btn-text">Read all stories &rarr;</a>
             </div>
         </section>
+        <div class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                    Start booking now
+                                </h2>
+                            </div>
+                            <div class="form__group">
+                                <input type="text" class="form__input" placeholder="Full name" required id="name">
+                                <label for="name" class="form__label">Full name</label>
+                            </div>
+                            <div class="form__group">
+                                <input type="email" class="form__input" placeholder="Email address" required id="name">
+                                <label for="email" class="form__label">Email address</label>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- <section class="grid-test">
