--- a/index.html
+++ b/index.html
@@ -344,6 +344,31 @@
         </div>
     </main>
 
+    <footer class="footer">
+        <div class="footer__logo-box">
+            <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+        </div>
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Privacy</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    Build <a href="#" class="footer__link">Online project</a>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis aspernatur deserunt blanditiis tempora vero exercitationem impedit dolorem? Rerum illo error, voluptate illum, asperiores fugit hic officiis eveniet minima quam omnis.
+                    This is a <a href="#" class="footer__link">Practice project</a>
+                </p>
+            </div>
+        </div>
+    </footer>
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
