--- a/index.html
+++ b/index.html
@@ -388,6 +388,27 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <h2 class="heading-secondary u-margin-bottom-small">
+                    Start booking now
+                </h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                    Important &ndash; Please read before booking
+                </h3>
+                <p class="popup__text">
+                    Nunc blandit finibus libero, sed pulvinar purus dapibus in. Nulla nec orci ac urna elementum efficitur. Nulla vel quam accumsan, suscipit arcu eget, ornare mauris. Suspendisse dui urna, rutrum sit amet volutpat malesuada, viverra venenatis nulla. Nulla iaculis, mauris sed convallis auctor, eros sem ultrices risus, eget luctus tortor ex sed ligula. Curabitur gravida accumsan rhoncus. Integer id nisl ac tortor tristique mattis at sit amet libero. Vestibulum vel nibh sed lectus dictum hendrerit non non augue. Sed ullamcorper lectus ac tristique volutpat. Aenean rhoncus, orci semper egestas tempus, sem quam volutpat libero, eget rhoncus ipsum elit vel nisl. Nunc diam dui, blandit ut sodales ut, pellentesque at mauris. Sed et ultricies ante. Maecenas non massa sed urna accumsan laoreet quis eget erat. Morbi ac est ultricies, placerat diam quis, ultrices lectus.
+                </p>
+                <a href="#" class="btn btn--green">Book now</a>
+            </div>
+        </div>
+    </div>
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
