--- a/index.html
+++ b/index.html
@@ -365,7 +365,8 @@
 
     <footer class="footer">
         <div class="footer__logo-box">
-            <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+            <!-- srcset allows the browser to choose the best img to use according to the screen that is used by the user to display the webpage, 1x = low-res, 2x = high-res -->
+            <img srcset="img/logo-green-1x 1x, img/logo-green-2x.png 2x" alt="Full logo" class="footer__logo">
         </div>
         <div class="row">
             <div class="col-1-of-2">
