--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
                         
                         <img
                         srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
-                        sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                        sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                         class="composition__photo composition__photo--p1"
                         src="img/nat-1-large.jpg" 
                         alt="Photo 1"
                         >
                         <img
                         srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
-                        sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                        sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                         class="composition__photo composition__photo--p2"
                         src="img/nat-2-large.jpg" 
                         alt="Photo 2"
                         >
                         <img
                         srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
-                        sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                        sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                         class="composition__photo composition__photo--p3"
                         src="img/nat-3-large.jpg" 
                         alt="Photo 3"
